LiquiBASE Changelog
==========================================

Changes in version 0.9.0
------------------------------------
- Rollback support
- Initial Maven support
- Performance improvements
- New Database Refactorings:
  - Add View
  - Rename View
  - Drop View
  - Merge Columns
  - Add Foreign-Key Constraint
  - Drop Foreign-Key Constraint
  - Add Lookup Table
  - Add Primary Key
  - Add Auto-Increment
  - Add Default Value
  - Drop Default Value
  - Drop Primary Key
  - Add Unique Constraint
  - Drop Unique Constraint
- Code refactorings

Changes in version 0.8.2 (2007.4.30)
-------------------------------------
- Bug fixes

Changes in version 0.8.1 (2007.4.25)
-------------------------------------
- Prompting for non-local database is now false by default
- Ant non-local database prompt attribute changed to promptOnNonLocalDatabase from promptOnNonDevDatabase
- Bug Fixes


Changes in version 0.8.0 (2007.4.22)
-------------------------------------
- Changelog Pre-conditions
- Execution contexts
- failOnError tag for changeSets
- addNotNullConstraint / dropNotNullConstraint
- allow "comment" tags
- Improved documentation
- Completed conversion to SourceForge
- Improved automated tests


Changes in version 0.7.0 (2007.3.16)
-------------------------------------
- Changed MD5Sum logic.  !! Need to run 'update databasechangelog set md5sum=null' !!
- Added support for autoIncrement columns in createTableChange
- Switched to LiquiBase name, including all package structures
- Moved code to SourceForge


Changes in version 0.6.3 (2007.1.10)
--------------------------------------
- Fixed bug in create table refactoring where it ignored constraint clauses

Changes in version 0.6.2 (2006.12.19)
--------------------------------------
- Fixed missing non-upper cased insert statement

Changes in version 0.6.1 (2006.12.12)
--------------------------------------
- Classpath for command line migrator can now include .ear files