@@ -5,9 +5,12 @@ import liquibase.migrator.preconditions.PreconditionSet;
 public class DatabaseChangeLog {
     private Migrator migrator;
     private PreconditionSet preconditions;
+    private String physicalFilePath;
+    private String logicalFilePath;
 
-    public DatabaseChangeLog(Migrator migrator) {
+    public DatabaseChangeLog(Migrator migrator, String physicalFilePath) {
         this.migrator = migrator;
+        this.physicalFilePath = physicalFilePath;
     }
 
     public Migrator getMigrator() {
@@ -20,5 +23,29 @@ public class DatabaseChangeLog {
 
     public void setPreconditions(PreconditionSet precond) {
         preconditions = precond;
+    }
+
+    public String getPhysicalFilePath() {
+        return physicalFilePath;
+    }
+
+    public void setPhysicalFilePath(String physicalFilePath) {
+        this.physicalFilePath = physicalFilePath;
+    }
+
+    public String getLogicalFilePath() {
+        return logicalFilePath;
+    }
+
+    public void setLogicalFilePath(String logicalFilePath) {
+        this.logicalFilePath = logicalFilePath;
+    }
+
+    public String getFilePath() {
+        if (logicalFilePath == null) {
+            return physicalFilePath;
+        } else {
+            return logicalFilePath;
+        }
     }
 }
